--- a/src/SelfDrivingCarsStyleSheet.css
+++ b/src/SelfDrivingCarsStyleSheet.css
@@ -10,6 +10,7 @@ body{
   font-family: Helvetica,Arial,sans-serif;
   background-color: #fafafa;
   color: #6e6a6e;
+
 }
 table, th, td {
   border:  1px solid black;
@@ -42,30 +43,24 @@ a.hover{
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 100;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-li {
-    float: left;
+    padding: 0;
+    width: 350px;
+    background-color: #f1f1f1;
 }
 
 li a {
     display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 20px;
+    color: #456;
+    padding: 8px 16px;
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
-    background-color: #111;
+li a.active {
+    background-color: #4CAF50;
+    color: white;
 }
 
-.active {
-    background-color: #4CAF50;
+li a:hover:not(.active) {
+    background-color: #444;
+    color: grey;
 }
